--- a/style.css
+++ b/style.css
@@ -19,3 +19,24 @@
 #dmbs{
 background-color: black;
 }
+.result_para_tag{
+    box-shadow: 5px 5px 5px grey;
+    font-size:20px;
+    background-color: black;
+}
+.copy_right_footer{
+    position:fixed;
+    color:white;
+    bottom:0;
+    width: 100%;
+    background-color: grey;
+    line-height: 3;
+    text-align:center;
+}
+canvas{
+border:5px solid white;
+border-radius: 20px;
+box-shadow:5px 5px 5px grey;
+margin-top: 150px;
+}
+
